package BuildingCentreReceipt;

public interface SelfFetchable {

    /**
     * get the pickup location of this self fetchable object
     * @return
     */
    String fetchFrom();
}
